--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -13,7 +13,7 @@ import ColorGrid from 'components/ColorGrid';
 
 Maintaining consistent and engaging digital interfaces throughout IBM, whether
 applications or experiences, demands extended guidance around color usage. The
-following concepts are the foundation as we strive to achieve balance and
+following concepts provide the foundation as we strive to achieve balance and
 harmony through our User Interface design.
 
 </PageDescription>
@@ -38,12 +38,9 @@ harmony through our User Interface design.
 
 Application of the color palette brings a unified and recognizable consistency
 to IBM's array of digital products and interfaces. This consistency is grounded
-by a set of well-defined rules on how to work with Carbon in the context of dark
+in a set of well-defined rules about how to work with the Carbon component library in the context of dark
 and light themes.
 
-A set of well-defined rules about how to work with the Carbon component library
-in the context of dark and light themes, grounds this consistency and makes it
-easy to apply.
 
 ![Color in UI](images/IBM_UI_Screens.gif)
 
@@ -56,7 +53,7 @@ The neutral gray family is dominant in the default themes, making use of subtle
 shifts in value to organize content into distinct zones.
 
 The core blue family serves as the primary action color across all IBM products
-and experiences. Around this family, additional colors are used sparingly and
+and experiences. Additional colors are used sparingly and
 purposefully.
 
 <div>
@@ -70,7 +67,7 @@ purposefully.
 ### Layering model
 
 Colors in the neutral gray palette are layered on top of each other to create
-depth and spacial associations. The layering model defines the logic of how
+depth and spatial associations. The layering model defines the logic of how
 colors stack on top of each other in a UI when using the Carbon themes. Aspects
 of the layering model are built directly into the themes, color tokens, and
 components.
@@ -97,10 +94,10 @@ specify the color values that serve those roles in the UI.
 
 | Term                                                    | Definition                                                                                                                                                                                  |     |
 | ------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
-| [Theme](/guidelines/color/overview/#themes)             | A collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
-| [Token](/guidelines/color/overview/#tokens)             | The role-based identifier that assigns a color. Used instead of a hex code. Tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.              |     |
-| [Role](/guidelines/color/overview/#color-roles)         | The systematic usage(s) of a color. Roles cannot be changed between themes.                                                                                                                 |     |
-| [Value](/guidelines/color/overview/#interaction-states) | The unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
+| [Theme](/guidelines/color/overview/#themes)             | A theme is a collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
+| [Token](/guidelines/color/overview/#tokens)             | A token is the role-based identifier that assigns a color. Unlike hex codes, tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.              |     |
+| [Role](/guidelines/color/overview/#color-roles)         | A role is the systematic usage of a color. Roles cannot be changed between themes.                                                                                                                 |     |
+| [Value](/guidelines/color/overview/#interaction-states) | A value is the unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
 
 ### Themes
 
@@ -171,13 +168,13 @@ layering model.
 
 #### Light themes
 
-There are two light themes: White and Gray 10. In the light themes, layers
+There are two light themes in Carbon: White and Gray 10. In the light themes, layers
 alternate between White and Gray 10. For enabled UI colors light themes
 primarily uses the color range of White to Gray 20.
 
-- **White theme**: Uses white background as it layering model base and is paired
+- **White theme**: uses white background as it layering model base and is paired
   with components using Gray 10 containers to start.
-- **Gray 10 theme:** Uses Gray 10 backgrounds as it layering model baseand is
+- **Gray 10 theme:** uses Gray 10 backgrounds as it layering model baseand is
   paired with components using white containers to start.
 
 All of the themes are available in
@@ -218,12 +215,12 @@ All of the themes are available in
 #### Dark themes
 
 There are two dark themes: Gray 90 and Gray 100. In the dark themes, layers
-become one step lighter with each added layer. For enabled UI colors dark themes
-primarily uses the color range of Gray 100 to Gray 70.
+become one step lighter with each added layer. For enabled UI colors, dark themes
+primarily use the color range of Gray 100 through Gray 70.
 
-- **Gray 90 theme**: Uses Gray 90 backgrounds and is paired with components
+- **Gray 90 theme**: uses Gray 90 backgrounds and is paired with components
   using Gray 80 containers to start.
-- **Gray 100 theme:** Uses Gray 100 backgrounds and is paired with components
+- **Gray 100 theme:** uses Gray 100 backgrounds and is paired with components
   using Gray 90 containers to start.
 
 All of the themes are available in
@@ -298,7 +295,7 @@ applying color in a consistent, reusable, and scalable way. Each color token is
 assigned a role and a value. The role determines where the token is applied in
 the UI and the value is the actual color (that is, the hex code) that will
 appear in an assigned theme. Tokens are used in place of a one-off hex code,
-allowing for changes in values to be made at scale for easy color management.
+allowing for changes in values to be made at scale, for easy color management.
 The token names themselves stay the same in code no matter which theme is being
 used.
 
@@ -384,11 +381,10 @@ of use and are built into the layer style tokens._
 - For values between Black and 70, interaction gets `+` adjustment.
 - For values between 60 and White, interaction gets `-` adjustment.
 
-For elements like text or icons that are use `secondary` colors for its enabled
-state when hovered will change to the `primary` color to subtly emphasis the
-element. Often times this shift in color to the text or icon element will also
-be accompanied with a background hover color shift as well. For example, in an
-overflow menu items use `$text-secondary` and `$layer` in its enabled state. On
+Elements like text or icons that use `secondary` colors for their enabled
+state, will change to `primary` color on hover, giving them a subtle emphasis. Often times this shift in color (to the text or icon element) will also
+be accompanied by a background hover color shift as well. For example, an
+overflow menu uses `$text-secondary` and `$layer` in its enabled state. On
 hover, the text switches to `$text-primary` and the background to
 `$layer-hover`.
 
@@ -430,7 +426,7 @@ value, and Black value shares the same active state as Gray 100 value.
 </Row>
 
 <Caption>
-  Shown in the white theme, (1) `$button-primary` enabled color and (2)
+  Shown in the White theme, (1) `$button-primary` enabled color and (2)
   `$button-primary-active` active color.
 </Caption>
 
@@ -438,8 +434,8 @@ value, and Black value shares the same active state as Gray 100 value.
 
 #### Selected
 
-Selected states indicated item(s) or option(s) that have been chosen in the UI
-by the user through any input method. Selected token are identified by the
+Selected states indicate item(s) or option(s) that have been chosen in the UI
+by the user through any input method. Selected tokens are identified by the
 `-selected` added to the end of the base token name, such as `$layer-selected`.
 The color logic for selected state is either one full step lighter or darker on
 the IBM color scale. For example, the Gray100 selected state is Gray 90.
@@ -470,7 +466,7 @@ shares the same selected state as Gray 100.
 The focus state draws attention to the active element on a page when using the
 keyboard or voice to navigate. In Carbon, the focus of an element is most
 commonly indicated by a 2px border around the element. In order to make it easy
-to identify and locate on a page most focus states use only one color per theme
+to identify and locate on a page, most focus states use only one color per theme
 controlled through the `$focus` color token.
 
 - In the light themes, the focus state usually appears as a Blue 60 border.
@@ -507,7 +503,7 @@ not subject to WC3 contrast compliance standards and is intentionally
 de-emphasized in a faded fashion.
 
 Disabled elements are always styled in the Gray family no matter its base color.
-Components specific styling will depend on the elements within it and what
+Component-specific styling will depend on the elements within it and what
 layers they are placed on. Some tokens have their own specific disabled tokens,
 such as `$layer-disabled`, while other elements are grouped together and share a
 disabled token like `$text-disabled`.
@@ -519,7 +515,7 @@ disabled token like `$text-disabled`.
 
 Using various forms of contrast is the most important consideration when making
 user-friendly color and interface choices. Awareness of standards and best
-practices is the key to accessible color selection.
+practices is the key to accessible color selections.
 
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
@@ -553,7 +549,7 @@ Contrast is the difference in brightness between any two elements. The
 specific ratios that achieve the minimum required contrast for legibility.
 Generally speaking, small text is any size below 24px and requires a 4.5:1
 contrast ratio. Large text is anything above 24px and requires a 3:1 contrast
-ratio. Graphical elements, such as charts in data visualization, also require a
+ratio. Graphical elements, such as data visualizations, also require a
 3:1 contrast ratio.
 
 The IBM palette is comprised of twelve color grades—Black, White and ten values
