--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -280,7 +280,7 @@ When using line tabs within a component (like a modal) the first label should
 always align to the other content in the space. Do not use contained tabs. The
 edges of the line tab may also bleed to the edges of the space if needed
 depending on the containers margins. To add hierarchical clarity and balance the
-tabs with the other content, a line may be added from the end of the last tab to
+tabs with the other content, a line may be added from the end of the last tab to the
 edge of the content area.
 
 <Row>
