--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -211,7 +211,7 @@ B. Indicator <br /> C. Icon <br /> D. Container
 
 Much like
 [buttons](https://www.carbondesignsystem.com/components/button/usage/#alignment),
-alignment of tabs depend on where they appear and whether or not they're
+alignment of tabs depends on where they appear and whether or not they're
 contained within another component. As a general rule, the first label for both
 line tabs and contained tabs align with the grid and the text below. If tabs are
 within another component, such as a card, follow the grid that you are using
