--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -333,7 +333,7 @@ should return to the last tab selected.
 </Row>
 
 <Caption>
-  Example of selected, unselected, and diabled states in line tabs (top) and
+  Example of selected, unselected, and disabled states in line tabs (top) and
   contained tabs (bottom)
 </Caption>
 
