--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -344,7 +344,7 @@ the [Style tab](https://carbondesignsystem.com/components/tabs/style).
 
 When your page requires more tabs that can fit or needs to adapt to a new
 browser size, tabs should become scrollable. Left and right arrows appear to
-help navigate the user through tabs that might be off page.
+help navigate the user through tabs that might be off-page.
 
 <Row>
 <Column colLg={8}>
