--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -234,7 +234,7 @@ inside the component and align the label with text in the component.
 
 With both line tabs and contained tabs, auto-width is the default behavior. Each
 tab will be a different size depending on the label's character count but will
-have have consistent padding on each side of the label. The first label,
+have consistent padding on each side of the label. The first label,
 selected by default, should align to the grid. Where the tabs end will vary and
 may not end on the grid. If needed, you may also use a line to help balance tabs
 with other components on the page.
