updated images per feedback

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -38,13 +38,15 @@ harmony through our User Interface design.
 
 Application of the color palette brings a unified and recognizable consistency
 to IBM's array of digital products and interfaces. This consistency is grounded
-in a set of well-defined rules about how to work with the Carbon component library in the context of dark
-and light themes.
+in a set of well-defined rules about how to work with the Carbon component
+library in the context of dark and light themes.
 
+<GifPlayer color="dark">
 
-![Color in UI](images/IBM_UI_Screens.gif)
+![UI color alternatives](images/introduction.gif)
+![UI color alternatives](images/introduction.jpg)
 
-<Caption></Caption>
+</GifPlayer>
 
 ## Color anatomy
 
@@ -53,8 +55,7 @@ The neutral gray family is dominant in the default themes, making use of subtle
 shifts in value to organize content into distinct zones.
 
 The core blue family serves as the primary action color across all IBM products
-and experiences. Additional colors are used sparingly and
-purposefully.
+and experiences. Additional colors are used sparingly and purposefully.
 
 <div>
   <ColorGrid colorFamily="blue" />
@@ -92,11 +93,11 @@ The layering model differs between the _light_ and _dark_ themes.
 Carbon uses tokens and themes to manage color. Tokens are role-based, and themes
 specify the color values that serve those roles in the UI.
 
-| Term                                                    | Definition                                                                                                                                                                                  |     |
-| ------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
+| Term                                                    | Definition                                                                                                                                                                                             |     |
+| ------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --- |
 | [Theme](/guidelines/color/overview/#themes)             | A theme is a collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
-| [Token](/guidelines/color/overview/#tokens)             | A token is the role-based identifier that assigns a color. Unlike hex codes, tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.              |     |
-| [Role](/guidelines/color/overview/#color-roles)         | A role is the systematic usage of a color. Roles cannot be changed between themes.                                                                                                                 |     |
+| [Token](/guidelines/color/overview/#tokens)             | A token is the role-based identifier that assigns a color. Unlike hex codes, tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.                        |     |
+| [Role](/guidelines/color/overview/#color-roles)         | A role is the systematic usage of a color. Roles cannot be changed between themes.                                                                                                                     |     |
 | [Value](/guidelines/color/overview/#interaction-states) | A value is the unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
 
 ### Themes
@@ -168,8 +169,8 @@ layering model.
 
 #### Light themes
 
-There are two light themes in Carbon: White and Gray 10. In the light themes, layers
-alternate between White and Gray 10. For enabled UI colors light themes
+There are two light themes in Carbon: White and Gray 10. In the light themes,
+layers alternate between White and Gray 10. For enabled UI colors light themes
 primarily uses the color range of White to Gray 20.
 
 - **White theme**: uses white background as it layering model base and is paired
@@ -215,8 +216,8 @@ All of the themes are available in
 #### Dark themes
 
 There are two dark themes: Gray 90 and Gray 100. In the dark themes, layers
-become one step lighter with each added layer. For enabled UI colors, dark themes
-primarily use the color range of Gray 100 through Gray 70.
+become one step lighter with each added layer. For enabled UI colors, dark
+themes primarily use the color range of Gray 100 through Gray 70.
 
 - **Gray 90 theme**: uses Gray 90 backgrounds and is paired with components
   using Gray 80 containers to start.
@@ -381,12 +382,12 @@ of use and are built into the layer style tokens._
 - For values between Black and 70, interaction gets `+` adjustment.
 - For values between 60 and White, interaction gets `-` adjustment.
 
-Elements like text or icons that use `secondary` colors for their enabled
-state, will change to `primary` color on hover, giving them a subtle emphasis. Often times this shift in color (to the text or icon element) will also
-be accompanied by a background hover color shift as well. For example, an
-overflow menu uses `$text-secondary` and `$layer` in its enabled state. On
-hover, the text switches to `$text-primary` and the background to
-`$layer-hover`.
+Elements like text or icons that use `secondary` colors for their enabled state,
+will change to `primary` color on hover, giving them a subtle emphasis. Often
+times this shift in color (to the text or icon element) will also be accompanied
+by a background hover color shift as well. For example, an overflow menu uses
+`$text-secondary` and `$layer` in its enabled state. On hover, the text switches
+to `$text-primary` and the background to `$layer-hover`.
 
 <Row>
 <Column colLg={8}>
@@ -434,8 +435,8 @@ value, and Black value shares the same active state as Gray 100 value.
 
 #### Selected
 
-Selected states indicate item(s) or option(s) that have been chosen in the UI
-by the user through any input method. Selected tokens are identified by the
+Selected states indicate item(s) or option(s) that have been chosen in the UI by
+the user through any input method. Selected tokens are identified by the
 `-selected` added to the end of the base token name, such as `$layer-selected`.
 The color logic for selected state is either one full step lighter or darker on
 the IBM color scale. For example, the Gray100 selected state is Gray 90.
@@ -503,9 +504,9 @@ not subject to WC3 contrast compliance standards and is intentionally
 de-emphasized in a faded fashion.
 
 Disabled elements are always styled in the Gray family no matter its base color.
-Component-specific styling will depend on the elements within it and what
-layers they are placed on. Some tokens have their own specific disabled tokens,
-such as `$layer-disabled`, while other elements are grouped together and share a
+Component-specific styling will depend on the elements within it and what layers
+they are placed on. Some tokens have their own specific disabled tokens, such as
+`$layer-disabled`, while other elements are grouped together and share a
 disabled token like `$text-disabled`.
 
 - For the light themes, disabled color values range from White to Gray 50
@@ -549,8 +550,8 @@ Contrast is the difference in brightness between any two elements. The
 specific ratios that achieve the minimum required contrast for legibility.
 Generally speaking, small text is any size below 24px and requires a 4.5:1
 contrast ratio. Large text is anything above 24px and requires a 3:1 contrast
-ratio. Graphical elements, such as data visualizations, also require a
-3:1 contrast ratio.
+ratio. Graphical elements, such as data visualizations, also require a 3:1
+contrast ratio.
 
 The IBM palette is comprised of twelve color grades—Black, White and ten values
 for each hue. The following table indicates the minimum number of steps required
